--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/reactstrap": "^6.4.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "reactstrap": "^7.0.2",
     "typescript": "^3.2.2"
   },
   "scripts": {
