--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.0.2",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.2.2"
   },
   "scripts": {
+    "lint": "tslint --fix 'src/**/*.{ts,tsx}'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
