--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.28",
     "@types/jest": "^23.3.12",
     "@types/material-ui": "^0.21.5",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/uuid": "^3.4.4",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -17,7 +21,8 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "lint": "tslint --fix 'src/**/*.{ts,tsx}'",
@@ -36,6 +41,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "mobx-react-devtools": "^6.0.3",
     "node-sass": "^4.11.0"
   }
 }
