--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.28",
-    "@types/jest": "^23.3.12",
-    "@types/material-ui": "^0.21.5",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/uuid": "^3.4.4",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "react": "^16.7.0",
@@ -29,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,7 +36,23 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "^23.3.12",
+    "@types/material-ui": "^0.21.5",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/uuid": "^3.4.4",
+    "@types/storybook__react": "^4.0.0",
+    "@babel/core": "^7.2.2",
+    "@storybook/addon-info": "^4.1.6",
+    "@storybook/react": "^4.1.6",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.5",
+    "jest": "^23.6.0",
     "mobx-react-devtools": "^6.0.3",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "storybook": "^1.0.0",
+    "ts-jest": "^23.10.5"
   }
 }
