--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
     "uuid": "^3.3.2"
   },
@@ -36,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@storybook/addon-info": "^4.1.6",
     "@storybook/react": "^4.1.6",
     "@types/jest": "^23.3.12",
@@ -46,11 +43,16 @@
     "@types/storybook__react": "^4.0.0",
     "@types/uuid": "^3.4.4",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.4",
     "jest": "^23.6.0",
     "mobx-react-devtools": "^6.0.3",
     "node-sass": "^4.11.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "storybook": "^1.0.0",
-    "ts-jest": "^23.10.5"
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0"
   }
 }
