--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.28",
+    "classnames": "^2.2.6",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "react": "^16.7.0",
@@ -35,6 +36,7 @@
     "@babel/core": "^7.2.2",
     "@storybook/addon-info": "^4.1.6",
     "@storybook/react": "^4.1.6",
+    "@types/classnames": "^2.2.7",
     "@types/jest": "^23.3.12",
     "@types/material-ui": "^0.21.5",
     "@types/node": "^10.12.18",
