--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "get-shit-done",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://get-shit-done-60d50.firebaseapp.com",
+  "homepage": "https://get-shit-done-60d50.firebaseapp.com",
   "dependencies": {
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
@@ -13,6 +13,7 @@
     "mobx-react": "^5.4.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
     "react-scripts": "2.1.3",
     "typescript": "^3.2.2",
     "uuid": "^3.3.2"
@@ -45,6 +46,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-ga": "^2.3.0",
     "@types/storybook__react": "^4.0.0",
     "@types/uuid": "^3.4.4",
     "awesome-typescript-loader": "^5.2.1",
