--- a/package.json
+++ b/package.json
@@ -49,17 +49,22 @@
     "@types/react-ga": "2.3.0",
     "@types/storybook__react": "4.0.0",
     "@types/uuid": "3.4.4",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "23.6.0",
     "mobx-react-devtools": "6.0.3",
     "node-sass": "4.12.0",
-    "react-docgen-typescript-webpack-plugin": "1.1.0",
     "storybook": "1.0.0",
-    "ts-jest": "23.10.5",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "tslint-react": "3.6.0"
+    "ts-jest": "23.10.5"
   }
 }
