--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "16.7.0",
     "react-ga": "2.5.6",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.2",
+    "typescript": "^3.7.5",
     "uuid": "3.3.2"
   },
   "scripts": {
-    "lint": "tslint --fix 'src/**/*.{ts,tsx}'",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint src/**/*.ts --fix",
+    "lint:prettier": "prettier --config .prettierrc --write src/**/*.{ts,js,json}",
     "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
@@ -64,6 +66,7 @@
     "jest": "23.6.0",
     "mobx-react-devtools": "6.0.3",
     "node-sass": "4.12.0",
+    "prettier": "^1.19.1",
     "storybook": "1.0.0",
     "ts-jest": "23.10.5"
   }
