--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "deploy": "yarn build && firebase deploy"
+    "deploy": "yarn build && firebase deploy",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -63,11 +64,18 @@
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.1",
     "jest": "23.6.0",
+    "lint-staged": "^10.0.7",
     "mobx-react-devtools": "6.0.3",
     "node-sass": "4.12.0",
     "prettier": "^1.19.1",
     "storybook": "1.0.0",
     "ts-jest": "23.10.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lerna run --stream precommit"
+    }
   }
 }
