--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cross-env": "5.2.0",
     "mobx": "5.8.0",
     "mobx-react": "5.4.3",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-ga": "2.5.6",
     "react-scripts": "2.1.3",
     "typescript": "^3.7.5",
@@ -40,22 +40,19 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "7.2.2",
     "@storybook/addon-info": "4.1.6",
     "@storybook/react": "4.1.6",
     "@types/classnames": "2.2.7",
     "@types/jest": "23.3.12",
     "@types/material-ui": "0.21.5",
     "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
+    "@types/react": "^16.9.19",
     "@types/react-dom": "16.0.11",
     "@types/react-ga": "2.3.0",
     "@types/storybook__react": "4.0.0",
     "@types/uuid": "3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "awesome-typescript-loader": "5.2.1",
-    "babel-loader": "8.0.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -68,7 +65,7 @@
     "jest": "23.6.0",
     "lint-staged": "^10.0.7",
     "mobx-react-devtools": "6.0.3",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "storybook": "1.0.0",
     "ts-jest": "23.10.5"
