--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "deploy": "yarn build && firebase deploy",
-    "precommit": "lint-staged"
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,8 +38,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/addon-info": "4.1.6",
-    "@storybook/react": "4.1.6",
     "@types/classnames": "2.2.7",
     "@types/jest": "23.3.12",
     "@types/material-ui": "0.21.5",
@@ -49,7 +45,6 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "16.0.11",
     "@types/react-ga": "2.3.0",
-    "@types/storybook__react": "4.0.0",
     "@types/uuid": "3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
@@ -67,7 +62,6 @@
     "mobx-react-devtools": "6.0.3",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
-    "storybook": "1.0.0",
     "ts-jest": "23.10.5"
   },
   "husky": {
