--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
     "@material-ui/lab": "3.0.0-alpha.28",
-    "classnames": "2.2.6",
-    "cross-env": "5.2.0",
-    "mobx": "5.8.0",
-    "mobx-react": "5.4.3",
+    "classnames": "^2.2.6",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "2.5.6",
@@ -48,6 +47,7 @@
     "@types/uuid": "3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "cross-env": "5.2.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
