chore: add better-styled-components eslint plugin

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
 		"jest",
 		"@typescript-eslint",
 		"prettier",
-		"json"
+		"json",
+		"better-styled-components"
 	],
 	"extends": [
 		"eslint:recommended",
