--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "classnames": "^2.2.6",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "2.5.6",
     "react-scripts": "2.1.3",
+    "styled-components": "^5.0.1",
     "typescript": "^3.7.5",
     "uuid": "3.3.2"
   },
@@ -44,6 +46,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "16.0.11",
     "@types/react-ga": "2.3.0",
+    "@types/styled-components": "^4.4.2",
     "@types/uuid": "3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
@@ -51,6 +54,7 @@
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.6.0",
@@ -58,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.1",
     "jest": "23.6.0",
+    "jest-styled-components": "^7.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "ts-jest": "23.10.5"
